# onitama

./: Cargo.toml  README.md  docker-compose.yml  nginx.conf
backend/: Cargo.toml
backend/src/: error.rs  game.rs  main.rs  refactor.rs  session.rs  store.rs
docker/: nginx.conf
frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
frontend/src/: app.css
frontend/src/lib/: Board.svelte  Card.svelte  Game.svelte  Piece.svelte  types.ts
frontend/src/routes/: index.svelte  play.svelte
onitama/: Cargo.toml
onitama/src/: board.rs  card.rs  error.rs  lib.rs  piece.rs  pos.rs
