[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.7"
onitama = { path = "../onitama" }
serde_json = "1.0"
tokio = { version = "1.19", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
