[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-session = "3.0"
axum = { version = "0.5.7", features = ["headers", "ws"] }
onitama = { path = "../onitama" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.19", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
