[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.59"
axum = { version = "0.6.1", features = ["headers", "ws"] }
axum-extra = { version = "0.4.2", features = ["cookie-signed"] }
onitama = { path = "../onitama", features = ["serde"] }
redis = { version = "0.22.1", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.23", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.2", features = ["v4", "serde"] }
